--- a/weapp/weixin2/templates/weixin/advance_manage/qrcodes.html
+++ b/weapp/weixin2/templates/weixin/advance_manage/qrcodes.html
@@ -37,6 +37,15 @@
 	.xui-weixin-qrcodePage .xui-userData p:last-child{
 		margin:0;
 	}
+	.breadcrumRightButton > div.fr {
+		margin-top: 2px;
+	}
+	.xui-selcetBox > input{
+		vertical-align: sub;
+	}
+	.xui-advancedTableContent table thead input{
+		display: none;
+	}
 </style>
 {% endblock%}
 {% block content-panel %}
@@ -59,14 +68,19 @@
 		data-item-count-per-page="20"
 		data-enable-paginator="true"
 		class="panel-body mt40"
+		data-selectable ="true"
 		>
 	</div>
 
 	<span class="breadcrumRightButton">
-		<a class="btn btn-success lh20 xui-i-btnWidth xa-addQrcode" href="/new_weixin/qrcode/"><span class="xui-add-btn-icon">+</span>新建二维码</a>&nbsp;&nbsp;
-		<a class="btn btn-default lh20 xui-i-btnWidth xa-exportQrcode" href="javascript:void(0);" style="width:100px!important;">导出</a>
 		<div class="fr">
 			<input class="xui-searchInput  w250 xa-search-title h30" type="text"><a class="xui-searchBtn btn btn-default xa-searchBtn xa-search h30 ml0 mr5" style="min-width:50px!important;background: #f2f2f2;border-left-width: 0px; border-radius:0px;">搜索</a>
+		</div>
+		<a class="btn btn-default lh20 xui-i-btnWidth xa-exportQrcode fr mr20" href="javascript:void(0);" style="width:100px!important;">导出</a>
+		<a class="btn btn-success lh20 xui-i-btnWidth xa-addQrcode fr mr10" href="/new_weixin/qrcode/"><span class="xui-add-btn-icon">+</span>新建二维码</a>
+		<div class="xui-selcetBox ml20 mt10">
+			<input type="checkbox" class="xa-selcetAll">&nbsp;全选		
+			<a class="xa-editQrcodes ml20" href="javascript:void(0);" style="width:100px!important;">批量修改</a>
 		</div>
 	</span>
 	</div>
@@ -98,7 +112,7 @@
 				<tbody>
 					{{if items.length}}
 						{{each(i, qrcode) items}}
-							<tr class="h40" data-id="${qrcode.qrcode_id}">
+							<tr class="h40" data-id="${qrcode.qrcode_id}" data-setting="${qrcode.id}">
 								<td style="word-break:break-all; overflow:auto;padding:0 20px;text-align:left;170px;">
 									<a href="/new_weixin/qrcode/?setting_id=${qrcode.id}">${qrcode.name}</a>
 								</td>
@@ -167,6 +181,21 @@
 			}
 			var qrcodeView = new W.view.weixin.QrcodeView({
 				el: $("body"),
+			});
+			$('.xa-selcetAll').click(function(){
+				if($(this).is(':checked')){
+					$('.xa-content').find('input').prop('checked',true);
+				}else{
+					$('.xa-content').find('input').prop('checked',false);
+				}
+			});
+			$('.xa-editQrcodes').click(function(){
+				var qrcodes = [];				
+				$('.xa-content table tbody').find('input:checked').each(function(){
+					qrcodes.push($(this).parents('tr').attr('data-setting'));
+				});
+				var link = window.location.origin + "/new_weixin/qrcode/?setting_ids=" + qrcodes.toString();
+				window.location.href = link;
 			});
 		});
 		$('body').delegate('.relation-text','click',function(event) {
