--- a/weapp/weixin2/templates/weixin/advance_manage/qrcodes.html
+++ b/weapp/weixin2/templates/weixin/advance_manage/qrcodes.html
@@ -191,16 +191,21 @@
 			});
 			$('.xa-editQrcodes').click(function(){
 				var isChecked = $('.xa-content table tbody').find('input:checked');
-				if( isChecked.length == 0){
+				if( isChecked.length == 0 ){
 					W.showHint('error','请选择至少一个二维码');
 					return
+				}else if( isChecked.length == 1 ){
+					var qrcode = isChecked.parents('tr').attr('data-setting');
+					var link = window.location.origin + "/new_weixin/qrcode/?setting_id=" + qrcode;
+					window.location.href = link;
+				}else{
+					var qrcodes = [];				
+					isChecked.each(function(){
+						qrcodes.push($(this).parents('tr').attr('data-setting'));
+					});
+					var link = window.location.origin + "/new_weixin/qrcode/?setting_ids=" + qrcodes.toString();
+					window.location.href = link;
 				}
-				var qrcodes = [];				
-				isChecked.each(function(){
-					qrcodes.push($(this).parents('tr').attr('data-setting'));
-				});
-				var link = window.location.origin + "/new_weixin/qrcode/?setting_ids=" + qrcodes.toString();
-				window.location.href = link;
 			});
 		});
 		$('body').delegate('.relation-text','click',function(event) {
