【8854】新建积分应用，选择商品弹窗，以及切换分组

--- a/weapp/mall/templates/mall/editor/promotion/create_integral_sale.html
+++ b/weapp/mall/templates/mall/editor/promotion/create_integral_sale.html
@@ -322,7 +322,21 @@ $(document).ready(function() {
 		el: '.xa-productSelector',
 		tableTemplate: 'selected-promotion-products-view-tmpl-src',
 		promotionId: promotionId,
-		filter_type: 'integral_sale'
+		filter_type: 'integral_sale',
+		enableMultiSelection: true,	
+		dialogTitles: [{
+			'add_link': "/mall2/promotion/",
+			'name': "已上架商品", 
+			'type': "product",
+			'api': "promotion",
+			'template': "#promotion-products-view"
+		}, {            
+			'add_link': "/mall2/category_list/",
+			'name': "商品分组",
+			'type': "category",
+			'api': "categories",
+			'template': "#promotion-categories-view"
+		}]
 	});
 	productSelector.on('finish-select-products', onSelectProduct);
 	productSelector.render();
