--- a/weapp/mall/templates/mall/editor/orders.html
+++ b/weapp/mall/templates/mall/editor/orders.html
@@ -249,7 +249,9 @@
 					</td>
 					<td width="100" rowspan="${order.groups.length}">
 						{{if order.is_first_order }}<i class="xui-firstTag">首</i>{{/if}}
-						{{if order.member_id > 0}}
+						{{if order.member_is_subscribed == 0 && order.buyer_name =="" }}
+							非会员(${order.ship_name})
+						{{else}}
 							{{if data.mall_type}}
 								<a target="_blank" href="/member/detail/?id=${ order.member_id }">{{html order.buyer_name}}</a>(${order.ship_name})
 							{{else}}
@@ -280,8 +282,6 @@
 								>
 								</i>
 							</span>
-						{{else}}
-							非会员(${order.ship_name})
 						{{/if}}
 						{{if order.customer_message}}
 							<p class="pt5 tc"><a class="xa-costomerMessage xui-costomerMessage" data-content="${order.customer_message}"></a></p>
