--- a/weapp/mall/templates/mall/editor/promotion/integral_sales.html
+++ b/weapp/mall/templates/mall/editor/promotion/integral_sales.html
@@ -96,12 +96,12 @@
 								</div>
 								<div class="ml10 fl h60">
 									<div class="xui-commodityName">
-										<a href={{if product.status == "已删除"}}"javascript:void(0);" class="xui-cursor-disabled"{{else}}"${promotion.product.detail_link}" target="_blank"{{/if}}>${product.name}</a>
+										<a href={{if product.status == "已删除"}}"javascript:void(0);" class="xui-cursor-disabled"{{else}}"${product.detail_link}" target="_blank"{{/if}}>${product.name}</a>
 									</div>
-									{{if promotion.product.is_use_custom_model}}
-									<span class="label label-info xa-showAllModels cursor-pointer fn" style="font-size: 1.0em;background:#1183ca;padding-bottom:2px;">查看${promotion.product.models.length}个规格详情</span>
+									{{if product.is_use_custom_model}}
+									<span class="label label-info xa-showAllModels cursor-pointer fn" style="font-size: 1.0em;background:#1183ca;padding-bottom:2px;" data-product-id=${product.id}>查看${product.models.length}个规格详情</span>
 									{{else}}
-									<p class="xui-greyColor">商品条码：${promotion.product.bar_code}</p>
+									<p class="xui-greyColor">商品条码：${product.bar_code}</p>
 									{{/if}}
 								</div>
 							</div>
