--- a/weapp/mall/templates/mall/editor/promotion/integral_sale_detail.html
+++ b/weapp/mall/templates/mall/editor/promotion/integral_sale_detail.html
@@ -44,10 +44,10 @@
 						</div>
 						<div class="ml10 fl">
 							<div class="mb25">
-								<a href="{{product.detail_link}}" target="_blank" class=" {% if product.is_deleted %}xui-cursor-disabled{% endif %}">{{product.name}}</a>
+								<a href="{% if product.is_deleted %}javascript:void(0);{% else %}{{product.detail_link}}{% endif %}" target="_blank" class=" {% if product.is_deleted %}xui-cursor-disabled{% endif %}">{{product.name}}</a>
 							</div>
 							{% if product.is_use_custom_model %}
-							<span class="label label-info xa-showAllModels cursor-pointer" style="font-size: 1.0em;">查看{{product.models|length}}个规格详情</span>
+							<span class="label label-info xa-showAllModels cursor-pointer" style="font-size: 1.0em;" data-index="{{forloop.counter0}}">查看{{product.models|length}}个规格详情</span>
 							{% else %}
 							<p style="color:#666;">商品条码：{{product.bar_code}}</p>
 							{% endif %}
@@ -151,10 +151,12 @@
 $('#mall-product-list-view-model-info-tmpl-src').template('mall-product-list-view-model-info-tmpl');
 
 $(document).ready(function() {
+    var productsModels = W.loadJSON('product_models');
 	$(document).delegate('.xa-showAllModels', 'click', function(event) {
 		var $target = $(event.currentTarget);
-        var models = W.loadJSON('product_models');
+		var models = productsModels[parseInt($target.data('index'))]
         var properties = _.pluck(models[0].property_values, 'propertyName');
+        console.log(models, parseInt($target.data('index')), properties);
         var $node = $.tmpl('mall-product-list-view-model-info-tmpl', {properties: properties, models: models});
         W.popup({
             $el: $target,
