增加广告模块的图片的压缩、异步加载

--- a/weapp/termite/workbench/templates/workbench/wepage_webapp_page.html
+++ b/weapp/termite/workbench/templates/workbench/wepage_webapp_page.html
@@ -9,7 +9,10 @@
 
 {% block js %}
 <script type="text/javascript">
-W.preloadImgsOnPage('.xa-products-box ul li img');
+    W.preloadImgsOnPage([
+        { moduleName: 'imageGroup', tagId: '.wui-imageGroup a img' },
+        { moduleName: 'productList', tagId: '.xa-products-box ul li img' },
+   ]);
 </script>
 {% endblock %}
 
