参数二维码修改选取优惠券的提示

--- a/weapp/weixin2/templates/weixin/advance_manage/edit_qrcode.html
+++ b/weapp/weixin2/templates/weixin/advance_manage/edit_qrcode.html
@@ -1,6 +1,13 @@
 {% extends "content_base_v2.html" %}
 {% load common_tag %}
 {% load account_filter %}
+{% block css %}
+    <style>
+        .alert-warning{
+            background-color: #EFD061 !important;
+        }
+    </style>
+{% endblock %}
 {% block content-panel %}
 <div class="xui-weixin-qrcodePage xa-weixin-materialsPage">
 	<div class="xui-rightPanel pr" style="border:0;">
