--- a/weapp/apps/customerized_apps/exsurvey/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/exsurvey/templates/editor/workbench.html
@@ -168,7 +168,7 @@
         "task": "weizoom-load-termite-components"
       }
     -->
-  {{ '["appkit.page", "appkit.componentadder", "appkit.surveydescription", "appkit.qa", "appkit.selection", "appkit.textlist", "appkit.submitbutton","appkit.uploadimg","appkit.dropdownbox"]'|load_termite_components|safe }}
+  {{ '["appkit.page", "appkit.componentadder", "appkit.commondescription", "appkit.qa", "appkit.selection", "appkit.textlist", "appkit.submitbutton","appkit.uploadimg","appkit.dropdownbox"]'|load_termite_components|safe }}
   <!-- *end_prunt_task* -->
 
 {% if not is_deleted_data %}
