--- a/weapp/mall/templates/mall/editor/order_detail.html
+++ b/weapp/mall/templates/mall/editor/order_detail.html
@@ -162,12 +162,12 @@
   {% if mall_type %}
       {% for supplier in suppliers %}
           <li class="xa-count {% if forloop.first %}active{% endif %}" data-total-status-value="{{ supplier.id }}" data-supplier-type="s">
-            <a href="javascript:void(0);" class="text_nowrap" title="{{ supplier.name }}">{{ supplier.name }}</a>
+            <a href="javascript:void(0);">{{ supplier.name }}</a>
           </li>
       {% endfor %}
       {% for supplier_store in supplier_stores %}
           <li class="xa-count {% if forloop.first and suppliers|length == 0 %}active{% endif %}" data-total-status-value="{{ supplier_store.user_id }}" data-supplier-type="u">
-            <a href="javascript:void(0);" class="text_nowrap" title="{{ supplier_store.store_name }}">{{ supplier_store.store_name }}</a>
+            <a href="javascript:void(0);">{{ supplier_store.store_name }}</a>
           </li>
       {% endfor %}
   {% else %}
@@ -284,7 +284,7 @@
                   {% endif %}
                   {% if product.supplier_user_id %}
                     {% ifchanged product.supplier_user_id %}
-                        <td rowspan="{{product.supplier_user_length}}" style="text-align:center;border-right:1px solid #ddd;" width="80"><i class="xui-icon-sync">同</i>{{ product.supplier_store_name }}</td>
+                        <td rowspan="{{product.supplier_user_length}}" style="text-align:center;border-right:1px solid #ddd;" width="80">{{ product.supplier_store_name }}</td>
                     {% endifchanged %}
                   {% endif %}
               {% endif %}
@@ -323,7 +323,6 @@
               <br>
               （{{ product.count }}件）
               </td>
-
               <td class="xui-td-third"{% if product.noline %} style="border-top:none;"{% endif %}>
               {% if not is_sync %}
                 {% if product.promotion.type == 'flash_sale' %}
