--- a/weapp/mall/templates/mall/editor/onshelf_products.html
+++ b/weapp/mall/templates/mall/editor/onshelf_products.html
@@ -92,7 +92,7 @@
 		<tbody id='product_list'>
             {{if items.length}}
 	            {{each(i, product) items}}
-				<tr data-id="${product.id}" 
+				<tr data-id="${product.id}"
 					{{if !product.is_group_buying }}class="xa-selectTr"{{/if}}
 					data-is-group-buying="${product.is_group_buying}">
 					<td class="wui-advanced-table-sort-handler tl_important">
@@ -120,7 +120,13 @@
 							</div>
 						</div>
 					</td>
-					<td>{{if data.data.mall_type == 1}}${product.store_name}{{else}}${product.bar_code}{{/if}}</td>
+					<td>{{if data.data.mall_type == 1}}
+							{{if product.is_sync }}<i class="xui-icon-sync">同</i>{{/if}}
+							${product.store_name}
+						{{else}}
+							${product.bar_code}
+						{{/if}}
+					</td>
 					<td>
 						<ul>
 							{{each(i, category) product.categories}}
