--- a/weapp/mall/templates/mall/editor/orders.html
+++ b/weapp/mall/templates/mall/editor/orders.html
@@ -182,7 +182,7 @@
 							    ${data.supplier[group.id]}
 							{{/if}}
 							{{if group.supplier_user_id > 0 }}
-								<i class="xui-icon-sync">同</i>${data.supplier_users[group.supplier_user_id]}
+								<i class="xui-icon-sync">同</i>${group.products[0].supplier_store_name}
 							{{/if}}
                         {{else}}
                             {{if order.supplier_user_id > 0}}
