--- a/weapp/static_v2/js/view/apps_tags_selector/template.html
+++ b/weapp/static_v2/js/view/apps_tags_selector/template.html
@@ -2,7 +2,7 @@
 <div class="xui-apps-tagsSelector">
     <select class="xui-i-select">
         {{#each tags}}
-            <option value="{{this}}" {{#ifCond tags.type '===' 'no_tags'}}selected{{/ifCond}}>{{tags.name}}</option>
+            <option value="{{id}}:{{name}}" {{#ifCond tags.type '===' 'no_tags'}}selected{{/ifCond}}>{{name}}</option>
         {{/each}}
     </select>
 </div>
